tests/NormalTests/paczka1/fuzzy1/71553321.err
Error in line 5: vaZOzJC A970 57,0
Error in line 10: 5ekF A970 82,8
Error in line 18: mcGAJCIOr S941 I6,3
Error in line 14: 1YpC7qu6fS A181 97,8
Error in line 37: jC0ICIBW S941 34,2
